added ISOcodes reference to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This package provides a dataset with country and currency names, as well as ISO codes.
+This package provides a dataset with country and currency names, as well as ISO codes. It was created using `ISOcodes` package available on [CRAN](https://github.com/cran/ISOcodes).
 
 ## Installation
 
